--- a/package.json
+++ b/package.json
@@ -34,15 +34,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/"
+    "url": "git+https://github.com/sniperjitu/d3mitry"
   },
   "keywords": [
     "k"
   ],
-  "author": "Abdul Muttaqin",
+  "author": "Farid Muchsin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/issues"
+    "url": "https://github.com/sniperjitu/d3mitry/ssues"
   },
-  "homepage": "https://github.com/#readme"
+  "homepage": "https://github.com/sniperjitu/d3mitry/#readme"
 }
